2001-08-13  Philip Kendall  <pak21-fuse@srcf.ucam.org>

	* Version 0.3.1 released.

	* Removed need for glib (but it's still used if present)
	  (Matan Ziv-Av).

	* Separated OSS (Linux) specific sound code out into separate
	  files, removed most floating-point calculations from the AY
	  code, added support for 16-bit only devices, and added some
	  AY subsampling (Russell Marks).

	* Fuse now runs on a StrongARM 1110, using the new framebuffer
	  UI (Matan Ziv-Av).
	
	* Major tidy-up of display.c and event.c (Philip Kendall).

	* Implemented a `lazy write' scheme for the screen. Makes
	  rainbowing effects _much_ faster (and helps elsewhere as
	  well) (Philip Kendall).

	* Further improvements to the lazy write scheme - consecutive
	  lines which have changed are copied to the screen in one
	  block, rather than as separate lines (Philip Kendall).

	* Complete rewrite of the snapshot code; now handles .z80
	  and .sna snapshots (Philip Kendall).

	* Started separating some bits of code into subdirectories;
	  currently `libspectrum' for the snapshot code, and `z80'
	  for the Z80 core (Philip Kendall).

	* Added `AUTHORS' file (Philip Kendall).

	* Large rewrite of the code for changing machine type
	  (Philip Kendall).

	* Made `make install' work (Philip Kendall).

2001-01-31  Philip Kendall  <pak@ast.cam.ac.uk>

	* Version 0.3.0 released.

	* Fixed a large bug in the 48K snapshot saving routine.

	* Added rudimentary GTK+ interface.

	* Added svgalib interface (thanks to Matan Ziv-Av).

	* Made peripheral emulation much more modular, and added proper
	  decoding of ports.

	* Fixing timings for INI, OUTI, IND, OUTD and the repeated
	  versions (they were all one T-state too short).

	* Sound support under Linux (thanks to Russell Marks and Matan
	  Ziv-Av).

2000-12-17  Philip Kendall  <pak@ast.cam.ac.uk>

	* Version 0.2.1 released.

	* 2x2 and 3x3 displays now available.

	* Border emulation is back (with rainbowing).
